[package]
name = "gloo-timers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo-console = "0.2.1"
gloo-timers = { version = "0.2.2", path = "../../../git_others/gloo/crates/timers" }
js-sys = "0.3.56"
# gloo-timers = "=0.2.2"
wasm-bindgen = "0.2.79"
web-sys = "0.3.56"
